--- a/packages/coati-editor/src/plugins/TableCellResizer/index.css
+++ b/packages/coati-editor/src/plugins/TableCellResizer/index.css
@@ -10,7 +10,6 @@
 .TableCellResizer__resizer {
   position: absolute;
   touch-action: none;
-  z-index: 1000;
 }
 
 @media (pointer: coarse) {
